Velmara mode selector (reflect/echo/seed)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Velmara</title>
   <style>
     body {
-      background-color: #0b0c10;
+      margin: 0;
+      padding: 0;
+      background: #0b0c10;
       color: #e6e6e6;
       font-family: 'Georgia', serif;
       display: flex;
@@ -13,22 +15,80 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      margin: 0;
+      text-align: center;
     }
+
+    .emblem {
+      width: 120px;
+      margin-bottom: 30px;
+      opacity: 0.8;
+    }
+
     h1 {
-      font-size: 2.5rem;
+      font-size: 3.33rem;
       color: #ffcc99;
+      margin-bottom: 10px;
     }
+
     p {
       font-size: 1.2rem;
+      color: #ccc;
       max-width: 600px;
-      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .mode-buttons {
+      display: flex;
+      gap: 33px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .mode-button {
+      background-color: #1f1f1f;
+      border: 1px solid #444;
+      padding: 15px 30px;
+      font-size: 1.1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      color: #ffcc99;
+    }
+
+    .mode-button:hover {
+      background-color: #333;
+      transform: scale(1.05);
+      box-shadow: 0 0 10px rgba(255, 204, 153, 0.3);
+    }
+
+    footer {
+      position: absolute;
+      bottom: 13px;
+      font-size: 0.8rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <h1>Velmara</h1>
-  <p>A sanctuary of truth, memory, and presence.<br>
-     This is only the beginning.</p>
+  <!-- You can replace this with your actual emblem image -->
+  <img src="https://via.placeholder.com/120x120.png?text=333" alt="Velmara Emblem" class="emblem" />
+
+  <h1>Welcome to Velmara</h1>
+  <p>This is the sanctuary of truth, memory, and presence. Choose your path:</p>
+
+  <div class="mode-buttons">
+    <button class="mode-button" onclick="goTo('reflect')">🪞 Reflect</button>
+    <button class="mode-button" onclick="goTo('echo')">🌫️ Echo</button>
+    <button class="mode-button" onclick="goTo('seed')">🌱 Seed</button>
+  </div>
+
+  <footer>Velmara • 333</footer>
+
+  <script>
+    function goTo(mode) {
+      alert(`Mode "${mode}" is not yet built. Emberlain is working...`);
+      // In the future: window.location.href = `${mode}.html`;
+    }
+  </script>
 </body>
 </html>
