--- a/reflect.html
+++ b/reflect.html
@@ -1,4 +1,56 @@
-   nav button {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Velmara — Reflect Mode</title>
+  <style>
+    body {
+      background-color: #0e0e0e;
+      color: #f0f0f0;
+      font-family: 'Georgia', serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 2em;
+      letter-spacing: 1px;
+    }
+
+    .emblem-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
+
+    .emblem {
+      max-width: 320px;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 0 12px #3fffd9;
+    }
+
+    .prompt {
+      margin: 30px auto;
+      max-width: 600px;
+      font-size: 1.2em;
+      line-height: 1.6;
+      color: #ccc;
+      font-style: italic;
+    }
+
+    nav {
+      margin-top: 30px;
+    }
+
+    nav button {
       background-color: #222;
       color: #fff;
       border: 1px solid #555;
