--- a/reflect.html
+++ b/reflect.html
@@ -6,8 +6,8 @@
   <title>Velmara | Reflect</title>
   <style>
     body {
-      background-color: #0d0d0d;
-      color: #dcdcdc;
+      background-color: #1a1a1a;
+      color: #e6e6e6;
       font-family: 'Georgia', serif;
       display: flex;
       flex-direction: column;
