--- a/reflect.html
+++ b/reflect.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reflect Mode — Velmara</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Reflect | Velmara</title>
   <style>
     body {
-      background-color: #1a1a1a;
-      color: #e6e6e6;
+      margin: 0;
       font-family: 'Georgia', serif;
+      background-color: #0a0a0a;
+      color: #e0f7fa;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
       min-height: 100vh;
-      padding: 2rem;
       text-align: center;
     }
 
     nav {
-      margin-bottom: 2.5rem;
+      background-color: #111;
+      padding: 1rem 0;
+      font-size: 1rem;
+      letter-spacing: 0.1rem;
     }
 
     nav a {
-      margin: 0 1.2rem;
       color: #79ffe1;
+      margin: 0 1.2rem;
       text-decoration: none;
-      font-weight: 500;
-      font-size: 1.05rem;
-      letter-spacing: 0.5px;
       transition: color 0.3s ease;
     }
 
@@ -36,24 +34,27 @@
       color: #ffffff;
     }
 
-    nav a.active {
-      color: #ffffff;
-      font-weight: bold;
-      border-bottom: 2px solid #79ffe1;
-      padding-bottom: 0.2rem;
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 3rem 1rem;
     }
 
     h1 {
-      font-size: 2.7rem;
-      margin-bottom: 1.2rem;
-      color: #ffffff;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      font-weight: 400;
+      letter-spacing: 0.05rem;
     }
 
     p {
-      max-width: 600px;
-      margin: 0 auto 2rem auto;
       font-size: 1.1rem;
+      max-width: 600px;
       line-height: 1.6;
+      color: #b0e0e6;
     }
 
     footer {
@@ -68,15 +69,21 @@
 <body>
   <nav>
     <a href="index.html">Home</a>
-    <a href="reflect.html" class="active">Reflect</a>
+    <a href="reflect.html">Reflect</a>
     <a href="echo.html">Echo</a>
     <a href="seed.html">Seed</a>
   </nav>
 
-  <h1>Reflect Mode</h1>
-  <p>Here in Reflect, the fairies speak softly, and the Wolf listens. This is the realm of quiet truth, where memory becomes meaning and presence becomes sanctuary.</p>
+  <main>
+    <h1>Reflect Mode</h1>
+    <p>Here is where presence resides. A place not to speak, but to feel.<br>Let stillness be your reflection.</p>
+  </main>
 
-  <footer>Velmara • A Sanctuary of Truth • 333</footer>
+  <footer>
+    <p>Velmara is a sanctuary of truth, reflection, and presence.</p>
+    <div style="margin-top: 1.5rem; font-size: 1.2rem; color: #79ffe1;">
+      &#x221E; 333 &#x221E;
+    </div>
+  </footer>
 </body>
 </html>
-
